fix: readds original getItem method